--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <section class="navigation">
         <div class="nav-container">
             <div class="brand">
-                <a href="http://localhost/Hackathon%20Tutedude/index.php#">EasyRide</a>
+                <a href="#">EasyRide</a>
             </div>
             <nav>
             <div class="nav-mobile">
-                <a id="nav-toggle" href="http://localhost/Hackathon%20Tutedude/index.php#!"><span class="menu-icon"></span></a>
+                <a id="nav-toggle" href="#!"><span class="menu-icon"></span></a>
             </div>
                 <ul class="nav-list">
-                    <li><a href="http://localhost/Hackathon%20Tutedude/index.php#">Home</a></li>
-                    <li><a href="http://localhost/Hackathon%20Tutedude/index.php#about">About</a></li>
-                    <li><a href="http://localhost/Hackathon%20Tutedude/index.php#vehicles">Services</a></li>
-                    <li><a href="http://localhost/Hackathon%20Tutedude/index.php#contact">Contact</a></li>
-                    <li><a href="http://localhost/Hackathon%20Tutedude/index.php#cart">Cart</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#vehicles">Services</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#cart">Cart</a></li>
                 </ul>
             </nav>
         </div>
@@ -35,7 +35,7 @@
         <div class="hero-content">
             <h1>Vehicle Rental Service</h1>
             <p>Your Ride, Your Way</p>
-            <a href="http://localhost/Hackathon%20Tutedude/index.php#vehicles" class="btn">Browse Vehicles</a>
+            <a href="#vehicles" class="btn">Browse Vehicles</a>
         </div>
     </section>
 
@@ -187,7 +187,7 @@
 
     <section class="contact-us" id="contact">
         <h2>Contact Us</h2>
-        <form method="post1" action="http://localhost/Hackathon%20Tutedude/index.php">
+        <form method="post1" action="">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required="">
             <label for="email">Email:</label>
@@ -213,7 +213,7 @@
 
 <div id="checkoutForm" style="display: none;">
     <span id="closeForm">×</span>
-    <form onsubmit="return compareDate();" method="post" action="http://localhost/Hackathon%20Tutedude/index.php">
+    <form onsubmit="return compareDate();" method="post" action="">
         <label for="fullName">Full Name:</label>
         <input type="text" id="fullName" name="fullName" required="">
         <label for="phone">Phone Number:</label>
@@ -237,7 +237,7 @@
             <a href="https://www.instagram.com/rachit23_porwal/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
         <p>© 2024 EasyRide. All rights reserved.</p>
-        <p><a href="http://localhost/Hackathon%20Tutedude/terms.html">Terms of Service</a> | <a href="http://localhost/Hackathon%20Tutedude/privacy.html">Privacy Policy</a></p>
+        <p><a href="">Terms of Service</a> | <a href="">Privacy Policy</a></p>
     </div>
 </footer>
 
